<resources>
    <string name="app_name">BNA Entreprise</string>
    <string name="username">\ \ \ Nom d\'utilisateur</string>
    <string name="passwd">\ \ \ Mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="emp_manage">Gérez vos Employés</string>
    <string name="acc_manage">Gérez votre compte</string>
    <string name="salary_pay">Virement de salaire</string>
    <string name="address">Adresse</string>
    <string name="birth_date">Date de naissance</string>
    <string name="put_rib">Veuillez entrer votre RIB</string>
    <string name="phone">Tél</string>
    <string name="pay_salary">Passer le paiement</string>
    <string name="rib">RIB</string>
    <string name="role">Role</string>
    <string name="salary">Salaire</string>
    <string name="save">Enregistrer</string>
    <string name="next">Suivant</string>
    <string name="error_rib">Ce RIB n\'est pas lié à votre compte, veulliez taper un autre</string>
    <string name="error_cnx">Veuillez verifier votre connection internet</string>
    <string name="error_login">Veuillez verifier votre coordonnés d\'authentification</string>
    <string name="please_wait">Veuillez patienter</string>
    <string name="reset_passwd_msg">Pour des raison de sécurité, il faut consuler la plus proche agence BNA.</string>
    <string name="forget_passwd">Mot de passe oubliée</string>
    <string name="recharge_account">not all employées were paid, recharge your account</string>
    <string name="ask_to_print">Voulez-vous imprimer cette page? peut prendre long temps merci d\'attendre</string>
    <string name="print">Imprimer</string>
    <string name="check_balance">Consultez votre solde</string>
    <string name="chg_passwd">Changez votre mot de passe</string>
    <string name="history">Historique de payement</string>
    <string name="curr_passwd">Votre mot de passe actuelle</string>
    <string name="new_passwd">Votre nouvelle mot de passe</string>
    <string name="verif_passwd">Réentrez votre nouvelle mot de passe</string>
    <string name="send">Envoyer</string>
    <string name="finished">Términé</string>
    <string name="incorrect_passwd">Votre mot de passe est incorrecte</string>
    <string name="not_same_passwd">Mot de passe incorrect</string>
    <string name="your_balance">Votre solde est: %1$s Dt</string>
    <string name="put_emp_rib">Veuillez entrer le Rib d\'employe\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ </string>
    <string name="ok">Ok</string>
    <string name="rib_not_found">Cet RIB n\'est pas existant</string>
    <string name="length_error">%1$s doit être %2$s caractères</string>
    <string name="emp_exist">Cet employe est déjà exist</string>
    <string name="entr_rib">Ce RIB est destiné pour une entreprise</string>
    <string name="title_activity_ajout_employe">AjoutEmployeActivity</string>
    <string name="add">Ajouter</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="put_txt">Veuiller donner %1$s</string>
    <string name="supprimer">Supprimer</string>
    <string name="deman_supp">Voulez vous vraiment supprimer l\employé %1$s ?</string>
    <string name="ajout_emp">Ajouter Employé</string>
    <string name="entrer_nom_emp">Donner le nom D\'employer</string>
    <string name="filter">Filtrer</string>
    <string name="pay_date">Date de payement</string>
    <string name="verif_nom_emp">Verifier le nom d\'employé</string>

</resources>
