<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="5dp"
    android:paddingRight="15dp"
    android:onClick="hideSoftKeyboard"
    android:paddingLeft="15dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:onClick="hideSoftKeyboard"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/name_tv"/>

    <ScrollView
        android:layout_below="@id/name_tv"
        android:id="@+id/scroll"
        android:onClick="hideSoftKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:onClick="hideSoftKeyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/adr_et"
                android:drawableStart="@drawable/ic_location_on_grey"
                android:padding="10dp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:id="@+id/birth_et"
                android:drawableStart="@drawable/ic_cake_grey"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:id="@+id/phone_et"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_local_phone_grey"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/role"
                android:id="@+id/role_et"
                android:drawableStart="@drawable/ic_assignment_ind_grey"
                android:padding="10dp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_credit_card_grey"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:layout_height="35dp"
                    android:id="@+id/ribs_sp"/>

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="7dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_attach_money_grey"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salary"
                android:inputType="numberDecimal"
                android:id="@+id/salary_et"
                />
        </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scroll"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:id="@+id/save_btn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/save"/>
</RelativeLayout>