<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActionsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            android:layout_centerInParent="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="-100dp"
            android:src="@drawable/bna_entreprise_green"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manage_acc_btn"
            android:elevation="5dp"
            android:background="@drawable/btn_background"
            android:text="@string/acc_manage"
            android:textColor="@color/white"
            android:padding="20dp"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manage_emp_btn"
            android:elevation="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:text="@string/emp_manage"
            android:textColor="@color/white"
            android:padding="20dp"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:id="@+id/salary_payement_btn"
            android:background="@drawable/btn_background"
            android:text="@string/salary_pay"
            android:textColor="@color/white"
            android:padding="20dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>