<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswdActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            android:layout_centerInParent="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="-100dp"
            android:src="@drawable/bna_entreprise_green"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/curr_passwd"
            android:id="@+id/current_passwd_et"
            />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/new_passwd"
            android:inputType="textPassword"
            android:id="@+id/new_passwd_et"
            />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/verif_passwd"
            android:id="@+id/verif_passwd_et"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:background="@drawable/ripple_transparent"
                android:textColor="@color/white"
                android:id="@+id/send_btn"
                android:layout_height="wrap_content"
                android:text="@string/send"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/progress"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>